2013-08-17  Eli Zaretskii  <eliz@gnu.org>

	* decompress.c (Fzlib_available_p) [WINDOWSNT]: Update the value
	of zlib_initialized according to the results of calling
	init_zlib_functions.

2013-08-16  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* image.c: Implement an ImageMagick per-image cache.
	(imagemagick_get_animation_cache): Fix a double-free error.
	(imagemagick_load_image): Remove the ping_wand code, which only
	apparently saved time on invalid animated images, and slowed down
	everything else.  Optimise for the common case.

2013-08-16  Xue Fuqiao  <xfq.free@gmail.com>

	* buffer.c (syms_of_buffer) <buffer-undo-list>: Doc fix.

	* editfns.c (insert_before_markers): Mention overlay in the doc string.

	* marker.c (set_marker): Remove documentation of undefined behavior.

2013-08-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* image.c (imagemagick_compute_animated_image): Animate correctly
	when sub-images are smaller than the main image.
	(imagemagick_compute_animated_image): Setting the iterator row to
	zero is apparently not allowed.
	(imagemagick_compute_animated_image): Allow images that say they
	have sub-images that are bigger than the main image, but just crop
	them.

2013-08-15  Jan Djärv  <jan.h.d@swipnet.se>

	* nsmenu.m (menuWillOpen:): Fix preprocessor test (Bug#15001).

2013-08-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* image.c (imagemagick_compute_animated_image): Respect the GIF
	disposal methods.

2013-08-15  Ken Brown  <kbrown@cornell.edu>

	* emacs.c (main): Update comment about G_SLICE_ALWAYS_MALLOC.
	* gmalloc.c (memalign) [CYGWIN]: Revert last change; it's not
	needed.

2013-08-15  Paul Eggert  <eggert@cs.ucla.edu>

	Fix minor problems found by static checking.
	* frame.c (delete_frame):
	* xdisp.c (next_element_from_display_vector):
	Avoid uninitialized local.
	* image.c (imagemagick_compute_animated_image): Port to C89.
	Prefer usual GNU indentation style for loops.